# arxiv_crawler

./: .gitignore  README.md  pyproject.toml
arxiv_crawler/: pyproject.toml
arxiv_crawler/notebook/: debug_papers.ipynb
arxiv_crawler/scripts/: extract_best_papers_ids.py  main.py
arxiv_crawler/src/arxiv_crawler/: __init__.py  arxiv_util.py  crawler.py  tei_parser.py
arxiv_crawler/tests/: __init__.py  generate_fixtures.py
arxiv_search/: DATASET_CARD.md  README.md  pyproject.toml
arxiv_search/browser/: app.py
arxiv_search/browser/templates/: base.html  crawler_status.html  fulltext.html  home.html  paper.html  search.html
arxiv_search/configs/: default.yaml
arxiv_search/notebook/: dataloader.ipynb
arxiv_search/runs/lr1e-03_bs256_layers1_hidden768_heads12_20251114_151931/: config.yaml
arxiv_search/scripts/: build_embeddings_dataset.py  eval.py  rectflow.ipynb  train.py  train_direct.py  train_rectflow.py  upload_to_huggingface.py
arxiv_search/src/arxiv_search/: __init__.py  config.py  dataloader.py  inference.py  iterable_coupling_dataset.py  model.py  search.py  training.py  training_rectflow.py
notebook/: debug_papers.ipynb
scripts/: initialize_list.py  main.py
src/arxiv_crawler/: arxiv_util.py  crawler.py  models.py
tests/: conftest.py  generate_fixtures.py  test_citation_extractor.py
tests/fixtures/: README.md  sample_paper_expected.json  sample_paper_expected.validation.txt
